src/ZososcriptGrammar.cpp.atg
//#domain
//cpp imports here
#include "SymbolTable.h"
#include "wchar.h"
//#enddomain

COMPILER Zoso

    // int plus, minus, times, slash, equals, lessThan, greaterThan, assign; // Operators
    int undef, integer, boolean, decimal; // types
    int var, function; //Object Kinds


    // int ADD, SUB, MUL, DIV, EQU, LSS, GTR, ASSIGN; // operation codes

    void InitDeclarations() {
        // plus = 0, minus = 1, times = 2, slash = 3, equals = 4, lessThan = 5, greaterThan = 6, assign = 7
        integer = 1, boolean = 2, decimal = 3;
        var = 0, function = 1;

    //     // Operational Codes
    //     ADD = 0, SUB = 1, MUL = 2, DIV = 3, EQU = 4, LSS = 5, GTR = 6, ASSIGN = 7;
    }
    SymbolTable *symbolTable;

CHARACTERS
    letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
    digit = "0123456789".
    quote = '\"'.
    cr  = '\r'.
    lf  = '\n'.
    tab = '\t'.
    space = ' '.

TOKENS
    number = digit { digit } [ '.'] { digit }.
    ident = letter { letter | digit }.
    string = quote { letter | digit } quote.

IGNORE cr + lf + tab + space

PRODUCTIONS
    Ident <wchar_t* &name> = 
        ident (. name = coco_string_create(t -> val); .)
    .

    AddOp = '+' | '-'.

    MulOp = '*' | '/'.

    VariableDeclaration (. wchar_t* name; int type; .) = 
        Type<type>
        Ident<name> (. symbolTable -> NewObj(name, var, type); .)
        {',' Ident<name> (. symbolTable -> NewObj(name, var, type); .) } 
        ';'
        
    .
    Type<int &type> =                        
        ( 
            "int" (. type = integer; .)
            | "bool" (. type = boolean; .)
            | "float" (. type = decimal; .)
            | "void" (. type = undef; .)
        )
    .

    FunctionDeclaration (. wchar_t* name; int type; .) = 
        "function" Type<type>  
        Ident<name> (. symbolTable -> NewObj(name, function, type); .)
         '(' { VariableDeclaration } ')' 
         '{' { Statement }'}'
    .

    Statement =
        "print" '(' { Expr | SimExpr | string } ')' ';' 
        | Expr ';'
        | FunctionDeclaration
        | VariableDeclaration
    .

    Expr = 
        SimExpr [ ( "==" | '<' | '>' ) SimExpr].

    SimExpr = 
        Term {AddOp Term}.

    Term =
        Factor {MulOp Factor}.

    Factor =
        number 
        | ident
        | '(' Expr ')' 
        | AddOp Factor
    .

    Zoso (. wchar_t* name; InitDeclarations(); .) = 
        "Zoso" Ident<name> (. symbolTable -> OpenScope(); .)
        '{' 
            { Statement }
        '}'
        (. symbolTable -> CloseScope(); .)
    .
END Zoso.

/*-------------------

TODO:
function call
variable assignation
add floats
change function declared variables scope

print shouldn't be in grammar? its more like its own method
symbolTable find method find error when undeclared
logical operations


-----------------------------------------------------*/
